--- a/templates/partner-change-request.html
+++ b/templates/partner-change-request.html
@@ -249,7 +249,7 @@ td.fixed-col[style*="width: 60px"] {
     white-space: nowrap;
 }
 .status-pending {
-    background-color: #fef3c7;
+    background-color: transparent;
     color: #d97706;
 }
 .status-approved {
