--- a/templates/subcontract-report.html
+++ b/templates/subcontract-report.html
@@ -62,7 +62,7 @@
         show_excel=True,
         show_register=True,
         show_delete=True,
-        show_final_check=True,
+        show_final_check=False,
         final_check_label=final_check_label,
         final_check_callback='requestBoardFinalCheck()'
     ) }}
